--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "@supabase/supabase-js": "^2.39.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dayjs": "^1.11.10",
+    "embla-carousel-autoplay": "^8.0.0",
+    "embla-carousel-react": "^8.0.0",
     "lucide-react": "^0.340.0",
     "next": "14.1.0",
     "react": "^18",
+    "react-big-calendar": "^1.11.2",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "tailwind-merge": "^2.2.1",
@@ -32,12 +36,13 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-big-calendar": "^1.8.9",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
-    "supabase": "^1.148.6",
+    "supabase": "^1.151.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
